--- a/C1_W2_Lab1.ipynb
+++ b/C1_W2_Lab1.ipynb
@@ -618,15 +618,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "446deea9-d822-4741-a99e-91f751e965c6",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "1869/1875 [============================>.] - ETA: 0s - loss: 0.4740 - accuracy: 0.8312\n",
+      "Reached 60% accuracy so cancelling training!\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.4735 - accuracy: 0.8313\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x27bde1ff8e0>"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "class myCallback(tf.keras.callbacks.Callback):def on_epoch_end(self, epoch, logs={}):\n",
-    "    if(logs.get('accuracy') >= 0.6): # Experiment with changing this value\n",
-    "      print(\"\\nReached 60% accuracy so cancelling training!\")\n",
-    "      self.model.stop_training = True\n",
+    "class myCallback(tf.keras.callbacks.Callback):\n",
+    "    def on_epoch_end(self, epoch, logs={}):\n",
+    "        if(logs.get('accuracy') >= 0.6): # Experiment with changing this value\n",
+    "            print(\"\\nReached 60% accuracy so cancelling training!\")\n",
+    "            self.model.stop_training = True\n",
     "\n",
     "callbacks = myCallback()\n",
     "\n",
@@ -643,6 +667,14 @@
     "model.compile(optimizer='adam', loss='sparse_categorical_crossentropy', metrics=['accuracy'])\n",
     "model.fit(training_images, training_labels, epochs=5, callbacks=[callbacks])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14c467c6-b935-4143-bc43-4f84f73340a8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
